# pi-frame

./: .gitignore  CLAUDE.md  flake.nix
.github/workflows/: build.yml
dev/: docker-compose.yml  piframe-config.example.json  qemu-test.sh  vm-server.nix
pi/: default.nix  pyproject.toml
pi/nixos/: configuration.nix  hardware.nix  image.nix  piframe-service.nix  tailscale.nix  wifi.nix
pi/src/piframe/: battery.py  client.py  listener.py  main.py  rtc.py
pi/src/piframe/display/: epd7in3e.py  epdconfig.py  hardware.py  renderer.py
pi/src/piframe/wifi/: manager.py  portal.py
pi/src/piframe/wifi/templates/: setup.html
pi/tests/: conftest.py  test_client.py  test_display.py  test_listener.py  test_portal.py  test_rtc.py  test_wifi_manager.py
server/: Dockerfile  default.nix  pyproject.toml
server/nixos/: configuration.nix
server/src/piframe_server/: __main__.py  acep.py  auth.py  main.py  models.py  session.py  storage.py
server/src/piframe_server/routes/: auth.py  images.py  status.py
server/src/piframe_server/static/: index.html
server/src/piframe_server/static/css/: styles.css
server/src/piframe_server/static/js/: app.js
server/tests/: conftest.py  test_auth.py  test_images.py
