[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "piframe"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pillow>=10.0",
    "flask>=3.0",
    "httpx>=0.27",
    "qrcode[pil]>=7.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
piframe-main = "piframe.main:main"
piframe-wifi-manager = "piframe.wifi.manager:run"
piframe-listener = "piframe.listener:run"

[tool.hatch.build.targets.wheel]
packages = ["src/piframe"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
