[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "piframe-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "python-multipart>=0.0.9",
    "pillow>=10.0",
    "httpx>=0.27",
    "aiofiles>=23.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[project.scripts]
piframe-server = "piframe_server.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/piframe_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
